--- a/pixi.toml
+++ b/pixi.toml
@@ -6,6 +6,7 @@ platforms = ["win-64"]
 version = "0.1.0"
 
 [tasks]
+run-day1 = 'python puzzles\Day1\aoc_practice.py'
 
 [dependencies]
 python = "3.14.*"
